<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1" >

    <LinearLayout
        android:id="@+id/fragmentUserInfoNickName_ll_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/icon_back_black"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/fragmentUserInfoNickName_tv_title"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fragmentUserInfoNickName_tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/Confirm"
        android:textColor="#000000"
        android:textSize="14sp" />

</RelativeLayout>