<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/fragment_coupon_titlebar" />

    <View style="@style/view_diliver_1px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fragmentCoupon_tv_unused"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/fragmentCoupon_tv_unused"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fragmentCoupon_tv_used"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/fragmentCoupon_tv_used"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fragmentCoupon_tv_expired"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/fragmentCoupon_tv_expired"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container_coupon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.2" />

</LinearLayout>