<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/viewer_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/IsToLogin"
        android:textColor="#000000"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/viewer_tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/IsToLogin"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <View style="@style/view_diliver_1px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp" >

        <TextView
            android:id="@+id/viewer_tv_toLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ToLogin"
            android:textColor="#000000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View style="@style/view_diliver_1px_vertical" />

        <TextView
            android:id="@+id/viewer_tv_notToLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/NotToLogin"
            android:textColor="#DEDEDE"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>