<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/fragmentAddressAdd_ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/icon_back_black"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Back"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fragmentAddressAdd_tv_add"
            android:textColor="#000000"
            android:textSize="15sp" />
    </RelativeLayout>

    <View style="@style/view_diliver_1px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#F2F2F2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentAddressAdd_tv_receiptPerson"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/fragmentAddressAdd_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@null"
                android:textColor="#000000"
                android:textSize="13sp" />
        </LinearLayout>

        <View style="@style/view_diliver_1px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentAddressAdd_tv_telNo"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/fragmentAddressAdd_et_telNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@null"
                android:textColor="#000000"
                android:textSize="13sp" />
        </LinearLayout>

        <View style="@style/view_diliver_1px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentAddressAdd_tv_address"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/fragmentAddressAdd_et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@null"
                android:textColor="#000000"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/fragmentAddressAdd_tv_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.8"
        android:background="#EE3B3B"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/Save"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</LinearLayout>
