<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <View style="@style/view_diliver_1px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/fragmentBook_ll_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/icon_collection_blue"
                        android:contentDescription="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragmentBook_tv_collection"
                        android:textColor="#000000"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <com.zyd.widget.ViewCircleNumber
                    android:id="@+id/fragmentBook_shoppingCartCountHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/Zero"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/fragmentBook_ll_shoppingCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/icon_shoppingcart_green"
                        android:contentDescription="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragmentBook_tv_shoppingCart"
                        android:textColor="#000000"
                        android:textSize="13sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/fragmentBook_tv_add2ShoppingCart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#EE3B3B"
        android:gravity="center"
        android:text="@string/fragmentBook_tv_joinToShoppingCart"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fragmentBook_tv_buy"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FF8247"
        android:gravity="center"
        android:text="@string/fragmentBook_tv_buyNow"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>
